* added function to extract the date from the celfile headers (celDates)

2009-03-25 Rob Scharpf - committed version 1.0.61
* update to copynumber vignette

2009-03-27 B Carvalho - committed version 1.0.62

* crlmm() returns a SnpSet object (from Biobase)

* fixed standard vignette to accommodate this change

* redefined calls/confs to accommodate this change

* fixed documentation to acommodate this change

2009-03-28 B Carvalho - committed version 1.0.64
* modified crlmm and cnrma to look for data at extdata/

2009-03-29 Rob Scharpf - committed version 1.0.65

* update to copynumber vignette

* updated computeCopynumber.Rd to accommodate SnpSet objects and
  changes to genomewidesnp6Crlmm

* cnrma function requires the cdfName

* update man files for cnrma and computeCopynumber

2009-03-30 Matt Ritchie - committed version 1.0.66

* added functions to read in idat files, pre-process and genotype 
data from Illumina SNP arrays (functions named readIdatFiles() 
and crlmmIllumina() in crlmm-illumina.R)
* added man pages for these functions

2009-04-01 Matt Ritchie - committed version 1.0.67

* added import statement for normalize.quantiles

2009-04-01 R.Scharpf - committed version 1.0.69

* added a few items to the crlmm TODOs

2009-04-03 B Carvalho - committed version 1.0.70

* Updated TODO and DESCRIPTION

2009-04-04 R.Scharpf - committed version 1.0.71

*  bug in oneBatch function for chromosome X.  added additional checks for missing values

2009-04-06 Matt Ritchie - committed version 1.0.72

* new argument in readIdatFiles() 'saveDate', which saves the date and time each array
is decoded and scanned
* results from crlmmIllumina() now saved as 'SnpSet' just like crlmm()
* reorganised Illumina preprocessing functions slightly to
  - allow copy number intensities to be saved along with snp intensities
  - make use of new indexing objects in the chip specific crlmm data packages
  - fix a few bugs