@@ -105,3 +105,7 @@ is decoded and scanned
   - allow copy number intensities to be saved along with snp intensities
   - make use of new indexing objects in the chip specific crlmm data packages
   - fix a few bugs
+
+2009-04-07 Rob Scharpf - committed version 1.0.73
+
+* added cdfName as argument to computeCopynumber
